[package]
name = "graphql-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
diesel = { version = "1.4.8", features=["postgres"]}
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.19"
juniper = "0.15.7"
serde = "1.0.132"
serde_derive = "1.0.132"
serde_json = "1.0.73"
